--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
                         <div id="myForm">
                             <label for="Birthday"></label>
                             <input type="date" name="Birthday" id="text">
+                            <div id="myForm">
+                                <label for="button"></label>
+                                <input type="submit" name="submit" id="submit">
                 </div>
+                <div id="aside">
+                    <h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, debitis?</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit velit reprehenderit quo, ut magnam, eos eaque amet corporis mollitia consequatur deserunt, adipisci unde blanditiis praesentium nam ea in? Ab, labore.</p>
+                    <h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, debitis?</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit velit reprehenderit quo, ut magnam, eos eaque amet corporis mollitia consequatur deserunt, adipisci unde blanditiis praesentium nam ea in? Ab, labore.</p>
+                </div>
+                <footer id="myFooter">
+                    <p> copyright &copy2021; Js Basics</p>
+                </footer>
             </div> <!---Container ends-->
             
         </body>
