changed the form input

--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
                     </div>
                  
                 <div id="myForm">
-                  <div class="birthday"> 
-                            <label for="Birthday">Enter Birth Day</label>
-                            <input type="date" name="Birthday" id="text">
+                  <div class="day"> 
+                            <label for="Day">Enter Day</label>
+                            <input type="day" name="Day" id="day">
                     </div>
+                    <div class="Month"> 
+                        <label for="Month">Enter Month</label>
+                        <input type="day" name="Birthday" id="Month">
+                </div>
+                <div class="year"> 
+                    <label for="year">Enter year</label>
+                    <input type="year" name="Birthday" id="year">
                     </div>
                 <div class="Checkbox">
                     <label for="Checkbox"> Male </label>
