Added if statement for Invalid dates and Months

--- a/index.html
+++ b/index.html
@@ -33,22 +33,19 @@
                     </div>
                     <div class="Month"> 
                         <label for="Month">Enter Month</label>
-                        <input type="day" name="Birthday" id="Month">
+                        <input type="day" name="Birthday" id="month">
                 </div>
                 <div class="year"> 
                     <label for="year">Enter year</label>
                     <input type="year" name="Birthday" id="year">
                     </div>
-                <div class="Checkbox">
-                    <label for="Checkbox"> Male </label>
-                    <input type="checkbox" name="Male">
+                <div class="radio">
+                    <label for="radio"> Male </label>
+                    <input type="radio" name="Check">
+                    <label for="radio"> Female </label>
+                    <input type="radio" name="Check">
                 </div>
-                <div class="Checkbox">
-                    <label for="Checkbox"> Female </label>
-                    <input type="checkbox" name="Female">
-                </div>
-
-
+                
 
                    </div> 
                 <div id="myForm">
